--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			Actors of James Bond
 		</title>
 		<link rel="stylesheet" href="style.css">
-		<!-- This is Project 2 for the IPND. Created by Doug McDonald. It provides a overview of the  James Bond movie series -->
+		<!-- This is Project 2 for the IPND.  It provides a overview of the  James Bond movie series -->
 
 	</head>
 
@@ -119,7 +119,7 @@
 	</div>
 	<br><br>
 	<footer>
-		Page created by Doug McDonald for Udacity Nanodegree. <a href="ref.html" > References page</a>
+		Page created for Udacity Nanodegree. <a href="ref.html" > References page</a>
 	</footer>
 </body>
 
